kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: richie-frontend
  labels:
    app: richie-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: richie-frontend
      app: richie-frontend
  template:
    metadata:
      labels:
        run: richie-frontend
        app: richie-frontend
    spec:
      containers:
      - name: richie-frontend
        image: dhbwrichie/richie-frontend:v0.0.4
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: richie-frontend
  labels:
    run: richie-frontend
spec:
  clusterIP: 10.152.183.218  
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: richie-frontend
